--- a/CICC-R-Py.qmd
+++ b/CICC-R-Py.qmd
@@ -52,7 +52,7 @@ pasado ¿las habrá metido en problemas? ¿habrá provocado defradación ambient
 Queridas y queridos colegas, esos son los antecedentes de la invitación
 que les hemos hecho llegar. En particular los temas que nosotros
 imaginamos para ustedes, sujetos a sus precisiones y reorientaciones,
-son los quqe se muestran en el cuadro.
+son los que se muestran en el cuadro.
 
 
 <!-- 
@@ -110,6 +110,10 @@ política.
 La [**pequeña edad de hielo**](https://historia.nationalgeographic.com.es/a/pequena-edad-hielo-ola-frio-que-asolo-viejo-continente_18751]), se refiere a la ola de frío qué asoló a Europa y Asia principalmente, entre los siglos XVI y XVIII (quizás hasta el XIX). Se vivieron allá condiciones climáticas con un gran descenso de las temperaturas. Dejó huellas tanto en la vida social como en la economía de todo el continente.
 
 ![Del manuscrito iluminado *Très Riches Heures du Duc de Berry*, hecho probablemente entre 1412 y 1416](../../CICC-UV/CICC-módulo-3/img/Les_Très_Riches_Heures_du_duc_de_Berry_février.jpg)
+
+
+## Tareas solicitadas
+
 
 
 
