--- a/CICC-R-Py.qmd
+++ b/CICC-R-Py.qmd
@@ -115,10 +115,7 @@ La [**pequeña edad de hielo**](https://historia.nationalgeographic.com.es/a/peq
 ## Tareas solicitadas
 
 
-
-
-
-## Referencias
+## *Estampas* para inspirar
 
 [Los Altépetl](../../CICC-UV/CICC-módulo-3/Referencias/539_R_08_historicidad_c.pdf)
 [¿Cómo eran las condiciones climáticas en la vida de Miguel decervantes?](../../CICC-UV/CICC-módulo-3/Referencias/clima%20durante%20vida%20de%20Miguel%20de%20Cervantes.pdf)
@@ -127,3 +124,6 @@ La [**pequeña edad de hielo**](https://historia.nationalgeographic.com.es/a/peq
 [The Global Crisis of the Seventeenth Century](../../CICC-UV/CICC-módulo-3/Referencias/Global%20Crisis%20of%20the%20Seventeenth%20Century.pdf)
 [Guerra, clima y catástrofe: una reconsideración de la crisis general del siglo XVII y de la decadencia de España](../../CICC-UV/CICC-módulo-3/Referencias/Guerra-clima-catástrofe.pdf)
 [La crisis climática es una lucha de clases](../../CICC-UV/CICC-módulo-3/Referencias/Moore-extracted-text-La-crisis-climatica-es-una-lucha-de-clases-2021-July-Jacobin-Latin-America.pdf)
+
+
+## Referencias
