--- a/CICC-R-Py.tex
+++ b/CICC-R-Py.tex
@@ -249,7 +249,7 @@ elegir?
 Queridas y queridos colegas, esos son los antecedentes de la invitación
 que les hemos hecho llegar. En particular los temas que nosotros
 imaginamos para ustedes, sujetos a sus precisiones y reorientaciones,
-son los quqe se muestran en el cuadro.
+son los que se muestran en el cuadro.
 
 \begin{table}
 \fontsize{12.0pt}{14.4pt}\selectfont
@@ -308,7 +308,10 @@ Berry}, hecho probablemente entre 1412 y 1416}
 
 \end{figure}%
 
-\subsection{Referencias}\label{referencias}
+\subsection{Tareas solicitadas}\label{tareas-solicitadas}
+
+\subsection{\texorpdfstring{\emph{Estampas} para
+inspirar}{Estampas para inspirar}}\label{estampas-para-inspirar}
 
 \href{../../CICC-UV/CICC-módulo-3/Referencias/539_R_08_historicidad_c.pdf}{Los
 Altépetl}
@@ -325,6 +328,8 @@ clima y catástrofe: una reconsideración de la crisis general del siglo
 XVII y de la decadencia de España}
 \href{../../CICC-UV/CICC-módulo-3/Referencias/Moore-extracted-text-La-crisis-climatica-es-una-lucha-de-clases-2021-July-Jacobin-Latin-America.pdf}{La
 crisis climática es una lucha de clases}
+
+\subsection{Referencias}\label{referencias}
 
 
 
