--- a/index.qmd
+++ b/index.qmd
@@ -31,16 +31,16 @@ semejanzas la humanidad ya ha vivido. No se trata de algo enteramente
 nuevo. Para comenzar, queremos hacer la pregunta introspectiva sobre
 ¿qué tanto nos importa o afecta el clima? lo que nos llevará a indagar
 ¿cómo es que la sociedad (economía, salud, bienestar) se vincula con el
-clima? ¿tenemos al clíma en la médula de nuestras culturas? ¿podemos
-reconocer esos signos? Si logrgamos reencontramos como entes *socioecológicos*, ¿Cómo nos explicamos que se haya diluido la consciencia de esta interdependencia vital? ¿qué implicaciones tendrá esta desconexión cultural actual? ¿valdría la pena buscar reconstruir esta conciencia socioambiental? ¿qué ganaríamos? si no lo hacemos ¿qué
+clima? ¿tenemos al clima en la médula de nuestras culturas? ¿podemos
+reconocer esos signos? Si logramos reencontramos como entes *socioecológicos*, ¿Cómo nos explicamos que se haya diluido la consciencia de esta interdependencia vital? ¿qué implicaciones tendrá esta desconexión cultural actual? ¿valdría la pena buscar reconstruir esta conciencia socioambiental? ¿qué ganaríamos? si no lo hacemos ¿qué
 perdemos?
 
 Como marco reflexivo consideraremos nuestra práctica de transformar los
 ecosistemas para hacer agricultura o construir los asentamientos en los que vivimos. ¿Cómo es que esto nos vincula con la diversidad biológica?. Claro está, además, que todo lo que hacemos requiere, finalmente, que utilicemos energía. Ya sea la de nuestros músculos, la de animales domésticos, de las corrientes de agua, del viento,
 del fuego, o del sol. La historia misma de cómo obtenemos esa energía, es
-desde luego otra forma como nos vínculamos con el entorno, con los
-ecosistemas. Las formas como algunas sociedades obtenián energía en el
-pasado ¿las habrá metido en problemas? ¿habrá provocado defradación ambiental crítica? (Mayas, Toltecas, Egipto, Mesopotamia, Nazca,Imperio Romano) Hoy parece que nuestras prácticas de uso de energía sí lo hastan haciendo. La situación la provoca nuestro enorme uso de combustibles fósiles y la degradación de los ecosistemas que dan soporte a la vida en el planeta. Si estas son ļas causas de un peligro inminente de gran magnitud ¿no sería lo inteligente buscar cambiar el rumbo? Es a lo que nos referimos como trtansición energética y es también a lo que aspira la sustentabilidad del desarrollo humano. En este bloque lo que queremos es simplemente reflexionar sobre el contexto que podría justificar buscar nuevos rumbos y renovar el espíritu creativo y el talento de los seres humanos. Transformar la preparación de los profesionales uniersitarios que diseñan y operan la producción de bienes y servicios cotidianamente. Si lo que está ocurriendo actualmente es verdaderamente una crisis socioambiental, estamos ante una encrusijada ¿qué rumbos deberíamos elegir?
+desde luego otra forma como nos vinculamos con el entorno, con los
+ecosistemas. Las formas como algunas sociedades obtenían energía en el
+pasado ¿las habrá metido en problemas? ¿habrá provocado degradación ambiental crítica? (Mayas, Toltecas, Egipto, Mesopotamia, Nazca,Imperio Romano) Hoy parece que nuestras prácticas de uso de energía sí lo están haciendo. La situación la provoca nuestro enorme uso de combustibles fósiles y la degradación de los ecosistemas que dan soporte a la vida en el planeta. Si estas son las causas de un peligro inminente de gran magnitud ¿no sería lo inteligente buscar cambiar el rumbo? Es a lo que nos referimos como transición energética y es también a lo que aspira la sustentabilidad del desarrollo humano. En este bloque lo que queremos es simplemente reflexionar sobre el contexto que podría justificar buscar nuevos rumbos y renovar el espíritu creativo y el talento de los seres humanos. Transformar la preparación de los profesionales universitarios que diseñan y operan la producción de bienes y servicios cotidianamente. Si lo que está ocurriendo actualmente es verdaderamente una crisis socioambiental, estamos ante una encrucijada ¿qué rumbos deberíamos elegir?
 
 Queridas y queridos colegas, esos son los antecedentes de la invitación
 que les hemos hecho llegar. En particular los temas que nosotros
@@ -90,7 +90,7 @@ evocadoras para lo que les proponemos construir entre todos.
 
 ::: {.columns}
 :::: {.column width=50%}
-¿Qué piensan de la noción nahuatl de **altépetl** (del náhuatl āltepētl, de āl- "[relativo al] agua" y tepē(tl) "cerro, montaña")? Por lo que entiendo su formación implicaba la interacción con los vecinos con quienes se competía por el control de un territorio que era relativamente escaso, así como por los recursos naturales de los diferentes ecosistemas que existían en él, lo mismo que por el control de las redes comerciales, por el dominio militar y por el reconocimiento de su legitimidad
+¿Qué piensan de la noción nahua de **altépetl** (del náhuatl āltepētl, de āl- "[relativo al] agua" y tepē(tl) "cerro, montaña")? Por lo que entiendo su formación implicaba la interacción con los vecinos con quienes se competía por el control de un territorio que era relativamente escaso, así como por los recursos naturales de los diferentes ecosistemas que existían en él, lo mismo que por el control de las redes comerciales, por el dominio militar y por el reconocimiento de su legitimidad
 política.
 
 ¿Ven en el bajo relieve del Rey (Chalcatzingo, Morelos) algo profundamente evocativo para nuestro tema?
@@ -118,7 +118,7 @@ Para la colaboración que les estamos pidiendo habría que hacer, por favor, lo 
 - [ ] Recomendar tres o cuatro referencias de interés para profundizar en la temática.
 - [ ] Una breve semblanza biográfica
 - [ ] Una fotografía de 1200x1600pixeles (jpg o png), en arreglo vertical. Que no ocupe más de 2 megas en disco.
-- [ ] Lo antes posibe en enero 2026.
+- [ ] Lo antes posible en enero 2026.
 
 ## *Estampas* para inspirar
 
