--- a/index.qmd
+++ b/index.qmd
@@ -142,4 +142,5 @@ Para la colaboración que les estamos pidiendo habría que hacer, por favor, lo 
 
 [La crisis climática es una lucha de clases](Referencias/Moore-extracted-text-La-crisis-climatica-es-una-lucha-de-clases-2021-July-Jacobin-Latin-America.pdf)
 
+[Historia humana y comparada del clima](https://www.fondodeculturaeconomica.com/Ficha/9786071654366/F)
 
