--- a/index.qmd
+++ b/index.qmd
@@ -1,27 +1,36 @@
 ---
 title: "Relación ser humano y naturaleza"
-
 author: 
   - name: Colegio Interinstitucional sobre Cambio Climático (CICC)
   - name: Miguel Equihua Zamora
-  
+format: 
+  html: 
+    code-tools: true
+editor_options: 
+  chunk_output_type: inline
+
 ---
 
-![Códice Fejérváry-Mayer](img/Page01.jpg){width=200}
+![Códice Fejérváry-Mayer](img/Page01.jpg){width="200"}
 
 ## Objetivo
 
-Examinar cómo las distintas civilizaciones han interpretado y transformado sus entornos naturales, para comprender cómo es que el clima, como gran síntesis ecológica, ha influido en cosmovisiones, sistemas de conocimiento, expresiones culturales y en las vicisitudes sociales y económicas a lo largo de la historia.
+Examinar cómo las distintas civilizaciones han interpretado y
+transformado sus entornos naturales, para comprender cómo es que el
+clima, como gran síntesis ecológica, ha influido en cosmovisiones,
+sistemas de conocimiento, expresiones culturales y en las vicisitudes
+sociales y económicas a lo largo de la historia.
 
+```{=html}
 <!-- 
 Acceso a
 [CoSustentaUV-Curso1](https://uvmx.sharepoint.com/:f:/s/co_sustenta_uv/EhThK2Q7gd1GuGUF_E7sYV8B7qTdiOQQwwVsw917icg7Gw?e=d03LuL) 
 
 \{\{\< downloadthis image.png \>\}\}
 -->
+```
 
 {{< downloadthis _descargas/colaboracincursocambioclimtico.zip dname = "cicc-docs-apoyo.zip" label = "Descarga docs CICC" type = "success" icon = "cloud-download " >}}
-
 
 ## Contexto
 
@@ -33,31 +42,51 @@ expresiones culturales que surgen del vínculo entre los seres humanos y
 la biosfera. Nos interesa reconocer que los procesos que son intrínsecos
 a un planeta vivo y dinámico (incluido el clima), no han sido solo un
 escenario pasivo para el desarrollo humano, sino que han sido y siguen
-siendo, actores fundamentales que moldean culturas, economías,
-formas de habitar, de ser y estar en el planeta. En este contexto, nos
-interesa apreciar que la actual crisis climática, (en realidad
-socioambiental) es con toda seguridad algo que, con diferencias pero también
-semejanzas, la humanidad ya ha vivido. No se trata de algo enteramente
-nuevo. Para comenzar, queremos hacer la pregunta introspectiva sobre
-¿qué tanto nos importa o afecta el clima? lo que nos llevará a indagar
-¿cómo es que la sociedad (economía, salud, bienestar) se vincula con el
-clima? ¿tenemos al clima en la médula de nuestras culturas? ¿podemos
-reconocer esos signos? Si logramos reencontramos como entes *socioecológicos*, ¿Cómo nos explicamos que se haya diluido la consciencia de esta interdependencia vital? ¿qué implicaciones tendrá esta desconexión cultural actual? ¿valdría la pena buscar reconstruir esta conciencia socioambiental? ¿qué ganaríamos? si no lo hacemos ¿qué
-perdemos?
+siendo, actores fundamentales que moldean culturas, economías, formas de
+habitar, de ser y estar en el planeta. En este contexto, nos interesa
+apreciar que la actual crisis climática, (en realidad socioambiental) es
+con toda seguridad algo que, con diferencias pero también semejanzas, la
+humanidad ya ha vivido. No se trata de algo enteramente nuevo. Para
+comenzar, queremos hacer la pregunta introspectiva sobre ¿qué tanto nos
+importa o afecta el clima? lo que nos llevará a indagar ¿cómo es que la
+sociedad (economía, salud, bienestar) se vincula con el clima? ¿tenemos
+al clima en la médula de nuestras culturas? ¿podemos reconocer esos
+signos? Si logramos reencontramos como entes *socioecológicos*, ¿Cómo
+nos explicamos que se haya diluido la consciencia de esta
+interdependencia vital? ¿qué implicaciones tendrá esta desconexión
+cultural actual? ¿valdría la pena buscar reconstruir esta conciencia
+socioambiental? ¿qué ganaríamos? si no lo hacemos ¿qué perdemos?
 
 Como marco reflexivo consideraremos nuestra práctica de transformar los
-ecosistemas para hacer agricultura o construir los asentamientos en los que vivimos. ¿Cómo es que esto nos vincula con la diversidad biológica?. Claro está, además, que todo lo que hacemos requiere, finalmente, que utilicemos energía. Ya sea la de nuestros músculos, la de animales domésticos, de las corrientes de agua, del viento,
-del fuego, o del sol. La historia misma de cómo obtenemos esa energía, es
-desde luego otra forma como nos vinculamos con el entorno, con los
-ecosistemas. Las formas como algunas sociedades obtenían energía en el
-pasado ¿las habrá metido en problemas? ¿habrá provocado degradación ambiental crítica? (Mayas, Toltecas, Egipto, Mesopotamia, Nazca,Imperio Romano) Hoy parece que nuestras prácticas de uso de energía sí lo están haciendo. La situación la provoca nuestro enorme uso de combustibles fósiles y la degradación de los ecosistemas que dan soporte a la vida en el planeta. Si estas son las causas de un peligro inminente de gran magnitud ¿no sería lo inteligente buscar cambiar el rumbo? Es a lo que nos referimos como transición energética y es también a lo que aspira la sustentabilidad del desarrollo humano. En este bloque lo que queremos es simplemente reflexionar sobre el contexto que podría justificar buscar nuevos rumbos y renovar el espíritu creativo y el talento de los seres humanos. Transformar la preparación de los profesionales universitarios que diseñan y operan la producción de bienes y servicios cotidianamente. Si lo que está ocurriendo actualmente es verdaderamente una crisis socioambiental, estamos ante una encrucijada ¿qué rumbos deberíamos elegir?
+ecosistemas para hacer agricultura o construir los asentamientos en los
+que vivimos. ¿Cómo es que esto nos vincula con la diversidad biológica?.
+Claro está, además, que todo lo que hacemos requiere, finalmente, que
+utilicemos energía. Ya sea la de nuestros músculos, la de animales
+domésticos, de las corrientes de agua, del viento, del fuego, o del sol.
+La historia misma de cómo obtenemos esa energía, es desde luego otra
+forma como nos vinculamos con el entorno, con los ecosistemas. Las
+formas como algunas sociedades obtenían energía en el pasado ¿las habrá
+metido en problemas? ¿habrá provocado degradación ambiental crítica?
+(Mayas, Toltecas, Egipto, Mesopotamia, Nazca,Imperio Romano) Hoy parece
+que nuestras prácticas de uso de energía sí lo están haciendo. La
+situación la provoca nuestro enorme uso de combustibles fósiles y la
+degradación de los ecosistemas que dan soporte a la vida en el planeta.
+Si estas son las causas de un peligro inminente de gran magnitud ¿no
+sería lo inteligente buscar cambiar el rumbo? Es a lo que nos referimos
+como transición energética y es también a lo que aspira la
+sustentabilidad del desarrollo humano. En este bloque lo que queremos es
+simplemente reflexionar sobre el contexto que podría justificar buscar
+nuevos rumbos y renovar el espíritu creativo y el talento de los seres
+humanos. Transformar la preparación de los profesionales universitarios
+que diseñan y operan la producción de bienes y servicios cotidianamente.
+Si lo que está ocurriendo actualmente es verdaderamente una crisis
+socioambiental, estamos ante una encrucijada ¿qué rumbos deberíamos
+elegir?
 
 Queridas y queridos colegas, esos son los antecedentes de la invitación
 que les hemos hecho llegar. En particular los temas que nosotros
 imaginamos para ustedes, sujetos a sus precisiones y reorientaciones,
 son los que se muestran en el cuadro.
-
-
 
 ```{r}
 #| label: tabla-participantes
@@ -91,56 +120,88 @@ temas_y_ponentes |>
 A manera de estampas, les comparto algunas referencias que pueden ser
 evocadoras para lo que les proponemos construir entre todos.
 
-[El trabajo de Florescano](https://www.nexos.com.mx/?p=32923), especialmente su estudio sobre los precios del maíz, resulta enormemente revelador de como ese vínculo entre los ciclos climáticos de largo plazo, afectan la economía y la estructura misma de las sociedades. [¿Clima y hambre?](https://nutricionenmexico.com/biblioteca/CRONOLOGIAS/Cronologia%20de%20hambrunas%20en%20Mexico.pdf)
+[El trabajo de Florescano](https://www.nexos.com.mx/?p=32923),
+especialmente su estudio sobre los precios del maíz, resulta enormemente
+revelador de como ese vínculo entre los ciclos climáticos de largo
+plazo, afectan la economía y la estructura misma de las sociedades.
+[¿Clima y
+hambre?](https://nutricionenmexico.com/biblioteca/CRONOLOGIAS/Cronologia%20de%20hambrunas%20en%20Mexico.pdf)
 
+¿Ven en el bajo relieve del Rey (Chalcatzingo, Morelos) algo
+profundamente evocativo para nuestro tema?
 
-¿Ven en el bajo relieve del Rey (Chalcatzingo, Morelos) algo profundamente evocativo para nuestro tema?
-
-::: {.column-margin}
-![Bajo relieve del llamado rey de la cueva](img/rey-de-la-cueva.jpg){width=400 fig-align="center" #fig-rey}
+::: column-margin
+![Bajo relieve del llamado rey de la
+cueva](img/rey-de-la-cueva.jpg){#fig-rey width="400" fig-align="center"}
 :::
 
-¿Qué piensan de la noción nahua de **altépetl** (del náhuatl āltepētl, de āl- "[relativo al] agua" y tepē(tl) "cerro, montaña")? Por lo que entiendo su formación implicaba la interacción con los vecinos con quienes se competía por el control de un territorio que era relativamente escaso, así como por los recursos naturales de los diferentes ecosistemas que existían en él, lo mismo que por el control de las redes comerciales, por el dominio militar y por el reconocimiento de su legitimidad
-política.
+¿Qué piensan de la noción nahua de **altépetl** (del náhuatl āltepētl,
+de āl- "\[relativo al\] agua" y tepē(tl) "cerro, montaña")? Por lo que
+entiendo su formación implicaba la interacción con los vecinos con
+quienes se competía por el control de un territorio que era
+relativamente escaso, así como por los recursos naturales de los
+diferentes ecosistemas que existían en él, lo mismo que por el control
+de las redes comerciales, por el dominio militar y por el reconocimiento
+de su legitimidad política.
 
+La [**pequeña edad de
+hielo**](https://historia.nationalgeographic.com.es/a/pequena-edad-hielo-ola-frio-que-asolo-viejo-continente_18751%5D),
+se refiere a la ola de frío qué asoló a Europa y Asia que sepamos, entre
+los siglos XVI y XVIII (quizás hasta el XIX). Se vivieron allá
+condiciones climáticas con un gran descenso de las temperaturas. Dejó
+huellas tanto en la vida social como en la economía de todo el
+continente.
 
-La [**pequeña edad de hielo**](https://historia.nationalgeographic.com.es/a/pequena-edad-hielo-ola-frio-que-asolo-viejo-continente_18751]), se refiere a la ola de frío qué asoló a Europa y Asia que sepamos, entre los siglos XVI y XVIII (quizás hasta el XIX). Se vivieron allá condiciones climáticas con un gran descenso de las temperaturas. Dejó huellas tanto en la vida social como en la economía de todo el continente.
-
-::: {.column-margin}
-![Manuscrito *Très Riches Heures du Duc de Berry* (probablemente entre 1412 y 1416)](img/Les_Très_Riches_Heures_du_duc_de_Berry_février.jpg){width=50 #fig-estampa}
+::: column-margin
+![Manuscrito *Très Riches Heures du Duc de Berry* (probablemente entre
+1412 y
+1416)](img/Les_Très_Riches_Heures_du_duc_de_Berry_février.jpg){#fig-estampa
+width="50"}
 :::
 
 \
 \
-
 
 ## Tareas solicitadas
 
-Para la colaboración que les estamos pidiendo habría que hacer, por favor, lo siguiente:
+Para la colaboración que les estamos pidiendo habría que hacer, por
+favor, lo siguiente:
 
-
-- [ ] Preparar una exposición con apoyo visual (powerpoint), en la que expliquen lo que deseen decir a lo largo de entre 40 y 50 minutos. Se pueden grabar ustedes mismos con apoyo de Zoom, como si estuvieran en una video conferencia, o si lo prefieren podríamos tener una verdadera videoconferencia y grabarnos mientras charlamos.
-- [ ] Indicar una o dos referencias básicas
-- [ ] Recomendar tres o cuatro referencias de interés para profundizar en la temática.
-- [ ] Una breve semblanza biográfica
-- [ ] Una fotografía de 1200x1600pixeles (jpg o png), en arreglo vertical. Que no ocupe más de 2 megas en disco.
-- [ ] Lo antes posible en enero 2026.
+-   [ ] Preparar una exposición con apoyo visual (powerpoint), en la que
+    expliquen lo que deseen decir a lo largo de entre 40 y 50 minutos.
+    Se pueden grabar ustedes mismos con apoyo de Zoom, como si
+    estuvieran en una video conferencia, o si lo prefieren podríamos
+    tener una verdadera videoconferencia y grabarnos mientras charlamos.
+-   [ ] Indicar una o dos referencias básicas
+-   [ ] Recomendar tres o cuatro referencias de interés para profundizar
+    en la temática.
+-   [ ] Una breve semblanza biográfica
+-   [ ] Una fotografía de 1200x1600pixeles (jpg o png), en arreglo
+    vertical. Que no ocupe más de 2 megas en disco.
+-   [ ] Lo antes posible en enero 2026.
 
 ## *Estampas* para inspirar
 
 [Los Altépetl](Referencias/539_R_08_historicidad_c.pdf)
 
-[¿Cómo eran las condiciones climáticas en la vida de Miguel de cervantes?](Referencias/clima%20durante%20vida%20de%20Miguel%20de%20Cervantes.pdf)
+[¿Cómo eran las condiciones climáticas en la vida de Miguel de
+cervantes?](Referencias/clima%20durante%20vida%20de%20Miguel%20de%20Cervantes.pdf)
 
-[El altepetl nahua como paisaje](Referencias/Dialnet-ElAltepetlNahuaComoPaisaje-7425612.pdf)
+[El altepetl nahua como
+paisaje](Referencias/Dialnet-ElAltepetlNahuaComoPaisaje-7425612.pdf)
 
-[El Rey de las entrañas de la tierra al cielo. (Chalcatzingo, Morelos)](Referencias/El Rey de las entrañas de la tierra al cielo. (Chalcatzingo, Morelos) - Ark. Experiencias.pdf)
+[El Rey de las entrañas de la tierra al cielo. (Chalcatzingo,
+Morelos)](Referencias/El%20Rey%20de%20las%20entrañas%20de%20la%20tierra%20al%20cielo.%20(Chalcatzingo,%20Morelos)%20-%20Ark.%20Experiencias.pdf)
 
-[The Global Crisis of the Seventeenth Century](Referencias/Global%20Crisis%20of%20the%20Seventeenth%20Century.pdf)
+[The Global Crisis of the Seventeenth
+Century](Referencias/Global%20Crisis%20of%20the%20Seventeenth%20Century.pdf)
 
-[Guerra, clima y catástrofe: una reconsideración de la crisis general del siglo XVII y de la decadencia de España](Referencias/Guerra-clima-catástrofe.pdf)
+[Guerra, clima y catástrofe: una reconsideración de la crisis general
+del siglo XVII y de la decadencia de
+España](Referencias/Guerra-clima-catástrofe.pdf)
 
-[La crisis climática es una lucha de clases](Referencias/Moore-extracted-text-La-crisis-climatica-es-una-lucha-de-clases-2021-July-Jacobin-Latin-America.pdf)
+[La crisis climática es una lucha de
+clases](Referencias/Moore-extracted-text-La-crisis-climatica-es-una-lucha-de-clases-2021-July-Jacobin-Latin-America.pdf)
 
-[Historia humana y comparada del clima](https://www.fondodeculturaeconomica.com/Ficha/9786071654366/F)
-
+[Historia humana y comparada del
+clima](https://www.fondodeculturaeconomica.com/Ficha/9786071654366/F)
